<resources>
    <string name="app_name">BiteSense</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_picture">Take Picture</string>
    <string name="profile_image">Profile Image</string>
    <string name="notification">Notification</string>
    <string name="how_are_you_today">How are you today?</string>
    <string name="last_scanned_items">Last Scanned Items</string>
    <string name="product_image">Product Image</string>
    <string name="warning">Warning</string>
    <string name="favorite_products">Favorite Products</string>
    <string name="scanned_items_history">Scanned Items History</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_passsword">Confirm Passsword</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">already have account?</string>
    <string name="new_to_bitesense">new to BiteSense</string>
    <string name="text_preference">Please select the option below according to your health condition</string>
    <string name="information_safe">* the information that you provide will be safe and confidential</string>
    <string name="allergy">Allergy</string>
    <string name="peanut">Alergi Kacang</string>
    <string name="egg">Alergi Telur</string>
    <string name="soy">Alergi Kedelai</string>
    <string name="fish">Alergi Ikan</string>
    <string name="milk">Alergi Susu</string>
    <string name="wheat">Alergi Gandum</string>
    <string name="shellfish">Alergi Shellfish</string>
    <string name="food_intolerance">Food Intolerance</string>
    <string name="dairy">Dairy</string>
    <string name="gluten">Gluten</string>
    <string name="caffeine">Kafein</string>
    <string name="msg">MSG</string>
    <string name="diabetes">Diabetes</string>
    <string name="pregnant">Hamil</string>
    <string name="other">Other</string>
    <string name="hypertension">Hipertensi</string>
    <string name="submit">Submit</string>
    <string name="scan_product">Scan Product</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="generete_qr">Generate QR</string>
    <string name="generate_qr">Generate QR</string>
    <string name="danger">Danger</string>
    <string name="safe">Safe</string>
    <string name="logout">Logout</string>
    <string name="product_detail">Product Detail</string>
    <string name="description">Description</string>
    <string name="composition">Composition</string>
    <string name="sample_description">Coca-Cola, atau Coke, adalah minuman ringan berkarbonasi yang diproduksi oleh Coca-Cola Company. Pada tahun 2013, produk Coke dijual di lebih dari 200 negara di seluruh dunia, dengan konsumen meminum lebih dari 1,8 miliar porsi minuman perusahaan per hari.</string>
    <string name="sample_composition">Air berkarbonasi, gula, pewarna karamel (kelas IV), konsentrat kola, pengatur keasaman (asam fosfat), kafein. Mengandung kafein 34mg/saji. maksimum konsumsi 150mg/hari.</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="pick_from_gallery">Pick From Gallery</string>
    <string name="flash">Flash</string>
    <string name="close">Close</string>
    <string name="analyze">Analyze</string>
    <string name="preview_image">Preview Image</string>
    <string name="scanned_products">Scanned Products</string>
    <string name="greet_user">Hello, %s</string>
    <string name="change_title">Change %s</string>
    <string name="download">Download</string>
    <string name="text_qr_download">Use the BiteSense app to create QR code in your product and receive good food traceability</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="expired_date">Expired Date</string>
    <string name="date_exp">EXP: 04–09-23</string>
    <string name="login_error_message">Login failed, please try again.</string>
    <string name="generate_error_message">Generate failed, please try again.</string>
    <string name="scanqr_error_message">Scan failed, please try again.</string>
    <string name="login_success_message">Login success</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="et_password_error_message">Passwords must be at least 8 characters</string>
    <string name="registration_error_message">Registration failed, please try again.</string>
    <string name="registration_success">Registration success</string>
    <string name="generate_succes">Generate QR success</string>
    <string name="permission_granted">Camera permission granted</string>
    <string name="permission_denied">Camera permission denied</string>
    <string name="take_picture_failed">Failed to take picture</string>
    <string name="failed_find_camera">Failed to find camera</string>
    <string name="under_development">Under Development</string>
    <string name="hello_user">Hello, User</string>
    <string name="user">User</string>
    <string name="sample_email">example@gmail.com</string>
    <string name="sample_number">+62 123456789</string>
    <string name="phone_number">+62 %s</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="success_upload">Success Uploading</string>
    <string name="obesity">Obesitas</string>
    <string name="gerd_maag">Gerd(Maag)</string>
    <string name="stroke">Stroke</string>
    <string name="uric_acid">Asam Urat</string>
    <string name="tree_nut">Alergi Kacang Pohon</string>
    <string name="fruktosa">Fruktosa</string>
    <string name="ragi">Ragi</string>
    <string name="grains">Biji-Bijian</string>
    <string name="salicylates">Salicylates</string>
    <string name="food_coloring">Pewarna Makanan</string>
    <string name="fill_it">Fill it First</string>
    <string name="success_edit">Success Edit</string>
    <string name="general_error">Something went wrong</string>
    <string name="fill_preference">Please fill the preference</string>
    <string name="upload_failed">Failed to upload</string>
    <string name="logout_success">Logout Success</string>
    <string name="fail_get_user_data">Cannot get user data</string>
    <string name="fail_get_user_health_condition">Cannot get user preference</string>
    <string name="fail_scan_product">Failed to scan product</string>
    <string name="ex_komposisi">ex:Sugar,soda,natrium</string>
    <string name="ex_name_product">ex:Cola,Teh gelas</string>
    <string name="et_email_error_message">Email address is not valid</string>
    <string name="et_username_error_message">Username must be filled</string>
    <string name="tanggal_produksi">Tanggal Produksi</string>
    <string name="tab_text_1">Description</string>
    <string name="tab_text_2">Composition</string>
    <string name="fail_get_detail">Failed to get detail product</string>
    <string name="no_data">No data</string>
</resources>