<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/gallery"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/pick_from_gallery"
        android:src="@drawable/round_photo_library_24"
        app:layout_constraintBottom_toBottomOf="@+id/capture_image"
        app:layout_constraintEnd_toStartOf="@+id/capture_image"
        app:layout_constraintTop_toTopOf="@+id/capture_image" />

    <ImageView
        android:id="@+id/capture_image"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginBottom="42dp"
        android:contentDescription="@string/capture_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/round_photo_camera_24" />

    <ImageView
        android:id="@+id/switch_camera"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/switch_camera"
        app:layout_constraintBottom_toBottomOf="@+id/capture_image"
        app:layout_constraintStart_toEndOf="@+id/capture_image"
        app:layout_constraintTop_toTopOf="@+id/capture_image"
        app:srcCompat="@drawable/round_cameraswitch_24" />

    <ImageView
        android:id="@+id/btn_flash"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/flash"
        android:src="@drawable/round_flash_on_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/flash"
        android:src="@drawable/round_close_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>